# Tema_2_PAOO

src/: CMakeLists.txt  main.cpp
src/cashDesk/: CMakeLists.txt  analyser.cpp  analyser.h  cashDesk.cpp  cashDesk.h  cashDesk.hpp  contributor.cpp  contributor.h
src/cashDesk/Properties/: CMakeLists.txt  building.cpp  building.h  land.cpp  land.h  property.cpp  property.h
